# tetro-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md
.github/workflows/: buildpush.yaml
Gallery/Screencasts/: tetrs_puzzle-mode-solutions.webm
src/: fmt_helpers.rs  game_keybinds.rs  game_logic.rs  gameplay_settings.rs  graphics_settings.rs  keybinds.rs  keybinds_presets.rs  live_input_handler.rs  main.rs  palette.rs  palette_presets.rs  rotation_systems.rs  tetromino_generators.rs
src/application/: mod.rs  savefile_load_store.rs
src/application/menus/: about.rs  adjust_gameplay.rs  adjust_graphics.rs  adjust_keybinds.rs  advanced_settings.rs  game_ended.rs  mod.rs  new_game.rs  pause.rs  play_game.rs  replay_game.rs  scores_and_replays.rs  settings.rs  statistics.rs  title.rs
src/backend/: game.rs  rotation_systems.rs  tetromino_generators.rs
src/frontend/: console.rs
src/frontend/terminal/: game_renderer.rs  mod.rs
src/game_mode_presets/: mod.rs
src/game_mode_presets/game_modifiers/: ascent.rs  cheese.rs  combo_board.rs  mod.rs  puzzle.rs
src/game_modes/: mod.rs
src/game_modes/game_modifiers/: ascent.rs  cheese.rs  combo.rs  mod.rs  print_msgs.rs  print_recency_stats.rs  puzzle.rs  start_board.rs
src/game_renderers/: alpha.rs  braille.rs  diff_print.rs  halfcell.rs  legacy_debug.rs  mod.rs  prototype.rs  smallascii.rs
tetrs_app_terminal/: Cargo.toml
tetrs_app_terminal/src/: game_input_handler.rs  game_renderer.rs  game_screen_renderers.rs  input_handler.rs  main.rs  terminal_tetrs.rs
tetrs_engine/: Cargo.toml
tetrs_engine/src/: extduration.rs  extnonnegf64.rs  game_builder.rs  game_update.rs  game_update_step.rs  lib.rs  piece_generation.rs  piece_rotation.rs  rotation_system.rs  rotation_systems.rs  tetromino_generator.rs  tetromino_generators.rs
tetrs_lib/: Cargo.toml
tetrs_lib/src/: lib.rs  rotation_systems.rs  tetromino_generators.rs
tetrs_terminal/: Cargo.toml
tetrs_terminal/src/: game_input_handler.rs  game_renderers.rs  game_screen_renderers.rs  main.rs  puzzle_mode.rs  terminal_app.rs  terminal_tetrs.rs
tetrs_terminal/src/game_mods/: cheese_mode.rs  combo_mode.rs  mod.rs  puzzle_mode.rs  util.rs  utils.rs
tetrs_terminal/src/game_renderers/: cached.rs  cached_renderer.rs  immediate.rs  mod.rs  naive.rs
tetrs_tui/: Cargo.toml
tetrs_tui/src/: fmt_helpers.rs  fmt_utils.rs  keybinds_presets.rs  live_input_handler.rs  main.rs  palette_presets.rs  terminal_app.rs  terminal_user_interface.rs  tui_utils.rs  utils.rs
tetrs_tui/src/application/: mod.rs
tetrs_tui/src/application/menus/: about.rs  adjust_gameplay.rs  adjust_graphics.rs  adjust_keybinds.rs  game.rs  game_ended.rs  mod.rs  new_game.rs  pause.rs  play_game.rs  replay_game.rs  scoreboard.rs  scores_and_replays.rs  settings.rs  title.rs
tetrs_tui/src/game_input_handlers/: combo_bot.rs  combo_bot_input_handler.rs  crossterm.rs  crossterm_handler.rs  live_terminal.rs  mod.rs  terminal.rs  terminal_input_handler.rs
tetrs_tui/src/game_mode_presets/: mod.rs
tetrs_tui/src/game_mode_presets/game_modifiers/: ascent.rs  cheese.rs  combo_board.rs  mod.rs  puzzle.rs
tetrs_tui/src/game_mode_presets/mods/: ascent.rs  cheese.rs  miscellany.rs  mod.rs  puzzle.rs
tetrs_tui/src/game_modifiers/: ascent.rs  cheese.rs  cheese_game.rs  cheese_mode.rs  combo.rs  combo_board.rs  combo_game.rs  combo_mode.rs  descent.rs  descent_game.rs  descent_mode.rs  legacy_descent.rs  misc.rs  misc_modifiers.rs  misc_mods.rs  mod.rs  puzzle.rs  puzzle_game.rs  puzzle_mode.rs  utils.rs
tetrs_tui/src/game_mods/: cheese_mode.rs  combo_mode.rs  descent_mode.rs  puzzle_mode.rs  utils.rs
tetrs_tui/src/game_renderers/: braille.rs  cached_renderer.rs  debug_renderer.rs  diff.rs  diff_print.rs  diff_renderer.rs  legacy_debug.rs  legacy_debug_renderer.rs  mod.rs
tetrs_tui/src/terminal_user_interface/: mod.rs
tetrs_tui/src/terminal_user_interface/menus/: about.rs  adjust_gameplay.rs  adjust_graphics.rs  adjust_keybinds.rs  game.rs  game_ended.rs  mod.rs  new_game.rs  pause.rs  scoreboard.rs  settings.rs  title.rs
