[package]
name = "tetro-tui"
version = "2.0.1"
edition = "2021"
rust-version = "1.90.0"
authors = ["Strophox"]
license = "MIT"
description = " A cross-platform terminal game where tetrominos fall and stack."
# documentation = "https://docs.rs/tetro-tui"
# homepage = "https://...
repository = "https://github.com/Strophox/tetro-tui"
readme = "README.md"
keywords = ["tetromino", "terminal", "game", "tui", "ascii-art"]
categories = ["games", "command-line-utilities"]
exclude = ["demo_assets/*", ".github/", "RELEASE-CHECKLIST.md"]


[profile.release]
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = true # Enable link-time optimization.
#codegen-units = 1 # Use fewer than 16 threads for compilation, but enable some optimizations.


[dependencies]
chrono = "0.4.38" # Generating timestamps.
clap = { version = "4.5.9", features = ["derive", "cargo"] } # Parsing command-line arguments.
crossterm = { version = "0.27.0", features = ["serde"] } # Cross-platform terminal handling.
dirs = "6.0.0"    # Cross-platform "Find the standard 'applications config' folder" functionality.
rand = "0.9.2"    # Expose `random_range` for ChaCha8Rng.

# Serializing data to store save file.
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", features = ["json"] }

falling-tetromino-engine = { version = "1.4.0", features = ["serde"] } # Game logic.
#falling-tetromino-engine = { path = "../falling-tetromino-engine", features = ["serde"] } # Dev Game logic.
