[package]
name = "tetrs_engine"
version = "0.2.0"
authors = ["Lucas Werner"]
description = "An implementation of a tetromino game engine, able to handle numerous modern mechanics."
repository = "https://github.com/Strophox/tetrs"
# documentation = "https://docs.rs/..."
license = "MIT"
# keywords = [...]
readme = "README.md"
edition = "2021"
rust-version = "1.83.0"
# categories = [...]

[lib]
name = "tetrs_engine"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
# Expose more PRNG helpers;
# Choosing a thread_random() game seed if none is specified.
rand = "0.9.2"
# Main, reproducible game PNRG.
rand_chacha = { version = "0.9.0", features = ["serde"] }

serde = { version = "1.0", features = ["derive"], optional = true }
